fix(security): fix JWT filter auth bypass and correct Spring Security endpoint configuration